--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,14 @@
     "module": "commonjs",
     "lib": ["dom", "es2022"],
     "jsx": "react-jsx",
-    "strict": true,
+    "strict": false,
     "sourceMap": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "allowJs": true,
+    "noImplicitAny": false,
     "outDir": ".erb/dll"
   },
   "exclude": ["test", "release/build", "release/app/dist", ".erb/dll"]
