--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "dependencies": {
     "antd": "^5.6.1",
     "axios": "^1.4.0",
+    "@ladjs/country-language": "1.0.3",
     "classnames": "^2.3.2",
     "@ant-design/icons": "^5.1.4",
     "@faker-js/faker": "^8.0.2",
@@ -260,5 +261,6 @@
       "src/main/**"
     ],
     "logLevel": "quiet"
-  }
+  },
+  "__npminstall_done": false
 }
