--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "antd": "^5.6.1",
     "axios": "^1.4.0",
     "@ladjs/country-language": "1.0.3",
+    "electron-store": "^8.1.0",
     "classnames": "^2.3.2",
     "@ant-design/icons": "^5.1.4",
     "@faker-js/faker": "^8.0.2",
@@ -109,7 +110,7 @@
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
     "detect-port": "^1.5.1",
-    "electron": "^26.2.1",
+    "electron": "26.2.1",
     "electron-builder": "^24.6.4",
     "electron-devtools-installer": "^3.2.0",
     "electronmon": "^2.0.2",
